[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Ilya Ashikhmin <ashikhmin.i@numdes.com>"]

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^1.1.1"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
